--- a/Gestao_hoteis/web/index.xhtml
+++ b/Gestao_hoteis/web/index.xhtml
@@ -1,12 +1,34 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+
     <h:head>
         <title>Hotel Management</title>
     </h:head>
     <h:body>
    Gestao de Hoteis
+   <h:form>
+        <p:panel header="Nova Reserva">
+            <p:outputLabel for="nome" value="Nome:" />
+            <p:inputText id="nome" value="#{reservasBean.nome}" />
+
+            <p:outputLabel for="data" value="Data:" />
+            <p:calendar id="data" value="#{reservasBean.data}" showOn="button" />
+
+            <p:commandButton value="Reservar" action="#{reservasBean.reservar}" update="reservasTable" />
+        </p:panel>
+        <p:dataTable id="reservasTable" var="reserva" value="#{reservasBean.reservas}">
+            <p:column headerText="Nome">
+                #{reserva.nome}
+            </p:column>
+            <p:column headerText="Data">
+                #{reserva.data}
+            </p:column>
+        </p:dataTable>
+    </h:form>
     </h:body>
 </html>
 
