--- a/Gestao_hoteis/web/index.xhtml
+++ b/Gestao_hoteis/web/index.xhtml
@@ -9,7 +9,7 @@
         <title>Hotel Management</title>
     </h:head>
     <h:body>
-   Gestao de Hoteis
+   Gestao de Hotel
    <h:form>
         <p:panel header="Nova Reserva">
             <p:outputLabel for="nome" value="Nome:" />
