--- a/Gestao_hoteis/web/index.xhtml
+++ b/Gestao_hoteis/web/index.xhtml
@@ -29,6 +29,16 @@
             </p:column>
         </p:dataTable>
     </h:form>
+   
+   <h3>Galeria de Imagens</h3>
+    <p:panelGrid columns="3" layout="grid">
+        <p:graphicImage value="..." alt="Imagem 1" />
+        <p:graphicImage value="..." alt="Imagem 2" />
+        <p:graphicImage value="..." alt="Imagem 3" />
+        <p:graphicImage value="C:\Users\Remane\Music\.jpg" alt="Imagem 4" />
+        <p:graphicImage value="C:\Users\Remane\Music\.jpg" alt="Imagem 5" />
+        <p:graphicImage value="caminho/para/imagem6.jpg" alt="Imagem 6" />
+    </p:panelGrid>
     </h:body>
 </html>
 
